# coordination_oru

./: .gitignore  LICENSE  README.md  build.gradle  coordinator_default_config_pre.rviz  locations_and_paths.txt  modelROS.ucls  modelSimulation2D.ucls  publishing.txt  testS.json
BrowserVisualizationResources/: Visualization.js  index.html
SimpleReedsSheppCarPlanner/: CMakeLists.txt
SimpleReedsSheppCarPlanner/src/: MultipleCircleReedsSheppCarPlanner.cpp  MultipleCircleStateValidityChecker.cpp  SimpleReedsSheppCarPlanner.cpp  SimpleStateValidityChecker.cpp
SimpleReedsSheppCarPlanner/src/include/: MultipleCircleStateValidityChecker.h  SimpleStateValidityChecker.h
SimpleRoadMapPlanner/: SimpleRoadMapPlanner.java
chitt_tests/LongPathNew/: stats-1596639486.365660.csv
chitt_tests/big_scenario_1352866100_20min/: stats.csv
chitt_tests/big_scenario_1352883600_20min/: stats-1593103523.921513.csv
chitt_tests/big_scenario_1352894400_20min/: CLiFF-map__upstream_30.path  CLiFF-map__upstream_31.path  CLiFF-map__upstream_32.path  CLiFF-map__upstream_33.path  CLiFF-map__upstream_34.path  CLiFF-map__upstream_35.path  CLiFF-map__upstream_36.path  CLiFF-map__upstream_37.path  CLiFF-map__upstream_38.path  CLiFF-map__upstream_39.path  CLiFF-map_noup_10.path  CLiFF-map_noup_11.path  CLiFF-map_noup_12.path  CLiFF-map_noup_13.path  CLiFF-map_noup_14.path  CLiFF-map_noup_15.path  CLiFF-map_noup_16.path  CLiFF-map_noup_17.path  CLiFF-map_noup_18.path  CLiFF-map_noup_19.path  GMMT-map__upstream_50.path  GMMT-map__upstream_51.path  GMMT-map__upstream_52.path  GMMT-map__upstream_53.path  GMMT-map__upstream_54.path  GMMT-map__upstream_55.path  GMMT-map__upstream_56.path  GMMT-map__upstream_57.path  GMMT-map__upstream_58.path  GMMT-map__upstream_59.path  RRTStar_noup_0.path  RRTStar_noup_1.path  RRTStar_noup_2.path  RRTStar_noup_3.path  RRTStar_noup_4.path  RRTStar_noup_5.path  RRTStar_noup_6.path  RRTStar_noup_7.path  RRTStar_noup_8.path  RRTStar_noup_9.path  (+21 more)
chitt_tests/pedestrians_atc_testing_1114_1352866100/: person24.txt  person28.txt  person36.txt  person49.txt  person54.txt  person66.txt  person70.txt  person73.txt  (+3 more)
maps/: atc.yaml  basement.yaml  map-corridors-vi.yaml  map-corridors.yaml  map-empty-circle.yaml  map-empty.yaml  map-partial-1.yaml  map-partial-2.yaml  map-partial-vi.yaml  map-partial.yaml  map.yaml  map1.yaml  pedsim_office.pgm  pedsim_office.yaml
missions/: icaps_locations_and_paths.txt  icaps_locations_and_paths_1.txt  icaps_locations_and_paths_4.txt
paths/: debug1.path  debug2.path  newpath1.path  newpath1inv.path  newpath2inv.path  newpath3.path  path2.path  path5.path  test_poses_and_path_data.txt
per-ACTOR/: locations_and_paths.txt  selections.txt
resources/: index.html  styles.css
(+4468 files in other folders)
